--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -37,7 +37,7 @@ jobs:
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: optimus-reward-bot
-          IMAGE_TAG: ${{ github.event.head_commit.message }}
+          IMAGE_TAG: ${{ github.sha }}
         run: |
           echo $IMAGE_TAG
           sed -i "s|<changeme>|$ECR_REPOSITORY|g" ./terraform_with_ALB/ecs-task-definition.sh
