--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,7 +3,7 @@ name: "workflow"
 on:
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
-    branches: [ "ecs" ]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -41,6 +41,7 @@ jobs:
         run: |
           echo $IMAGE_TAG
           sed -i "s|<changeme>|$ECR_REPOSITORY|g" ./terraform_with_ALB/ecs-task-definition.sh
+          sed -i "s|<changeme>|$ECR_REPOSITORY|g" ./terraform_with_ALB/task_def_snipe.tf
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
