encrypted-google-credentials

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,7 @@
     MONGOOSE_URI=
 
 #[GOOGLE]
+    # Add the service account credentials in GOOGLE_CREDENTIALS and encrypt it with ENC_KEY to get ENC_TEXT.REMOVE GOOGLE_CREDENTIALS after creating ENC_TEXT
     GOOGLE_CREDENTIALS=
+    ENC_TEXT=
+    ENC_KEY=fIRQ2sMIkQ2lMDNsrS2WiS/D3q10KQ2LjHOwud1Wk+w=
