--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^9.4.2",
+    "crypto": "^1.0.1",
     "express": "^4.18.2",
     "googleapis": "^118.0.0",
     "mongoose": "^7.2.2",
