--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -47,48 +47,48 @@ jobs:
           echo "$yaml_value" > .env
           #cat .env
 
-      # - name: Login to Amazon ECR
-      #   id: login-ecr
-      #   uses: aws-actions/amazon-ecr-login@v1
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
 
-      # - name: Build, tag, and push image to Amazon ECRs
-      #   id: build-image
-      #   env:
-      #     ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-      #     #ECR_REPOSITORY: optimus-reward-bot
-      #     IMAGE_TAG: ${{ github.sha }}
-      #   run: |
-      #     echo $IMAGE_TAG
-      #     sed -i "s|<changeme>|$ECR_REPOSITORY|g" ./terraform_with_ALB/ecs-task-definition.sh
-      #     sed -i "s|<changeme>|$ECR_REPOSITORY|g" ./terraform_with_ALB/task_def_snipe.tf
-      #     docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-      #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-      #     echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-
-
-
-      # - name: Download task definition
-      #   run: |
-      #       aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION }} --query taskDefinition > task-definition.json
+      - name: Build, tag, and push image to Amazon ECRs
+        id: build-image
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          #ECR_REPOSITORY: optimus-reward-bot
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          echo $IMAGE_TAG
+          sed -i "s|<changeme>|$ECR_REPOSITORY|g" ./terraform_with_ALB/ecs-task-definition.sh
+          sed -i "s|<changeme>|$ECR_REPOSITORY|g" ./terraform_with_ALB/task_def_snipe.tf
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
 
 
-      # - name: Fill in the new image ID in the Amazon ECS task definition
-      #   id: task-def
-      #   uses: aws-actions/amazon-ecs-render-task-definition@v1
-      #   with:
-      #     task-definition: task-definition.json
-      #     container-name: ${{ env.CONTAINER_NAME }}
-      #     image: ${{ steps.build-image.outputs.image }}
+      - name: Download task definition
+        run: |
+            aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION }} --query taskDefinition > task-definition.json
 
 
-      # - name: Deploy Amazon ECS task definition
-      #   uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-      #   with:
-      #     task-definition: ${{ steps.task-def.outputs.task-definition }}
-      #     service: ${{ env.ECS_SERVICE }}
-      #     cluster: ${{ env.ECS_CLUSTER }}
-      #     wait-for-service-stability: true
+
+      - name: Fill in the new image ID in the Amazon ECS task definition
+        id: task-def
+        uses: aws-actions/amazon-ecs-render-task-definition@v1
+        with:
+          task-definition: task-definition.json
+          container-name: ${{ env.CONTAINER_NAME }}
+          image: ${{ steps.build-image.outputs.image }}
+
+
+      - name: Deploy Amazon ECS task definition
+        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+        with:
+          task-definition: ${{ steps.task-def.outputs.task-definition }}
+          service: ${{ env.ECS_SERVICE }}
+          cluster: ${{ env.ECS_CLUSTER }}
+          wait-for-service-stability: true
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
         with:
@@ -99,18 +99,18 @@ jobs:
           terraform init
           
 
-      # - name: Terraform Validate
-      #   id: validate
-      #   run: |
-      #     cd terraform_with_ALB          
-      #     terraform validate -no-color
+      - name: Terraform Validate
+        id: validate
+        run: |
+          cd terraform_with_ALB          
+          terraform validate -no-color
               
-      # - name: Terraform Plan
-      #   id: plan
-      #   run: |
-      #     cd terraform_with_ALB
-      #     terraform plan -no-color -input=false
-      #   continue-on-error: true
+      - name: Terraform Plan
+        id: plan
+        run: |
+          cd terraform_with_ALB
+          terraform plan -no-color -input=false
+        continue-on-error: true
       # - name: Terraform Apply
       #   run: |
       #     cd terraform_with_ALB
