--- a/.github/workflows/ecsproduction.yml
+++ b/.github/workflows/ecsproduction.yml
@@ -21,7 +21,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: staging
+    environment: production
 
     steps:
       - name: Checkout
@@ -113,7 +113,7 @@ jobs:
         id: plan
         run: terraform plan -no-color -input=false 
             #continue-on-error: true
-        working-directory: ./terraform/ecs-prod
-      - name: Terraform Apply
-        run: terraform apply -auto-approve -input=false 
-        working-directory: ./terraform/ecs-prod
+      #   working-directory: ./terraform/ecs-prod
+      # - name: Terraform Apply
+      #   run: terraform apply -auto-approve -input=false 
+      #   working-directory: ./terraform/ecs-prod
