--- a/.github/workflows/ecsproduction.yml
+++ b/.github/workflows/ecsproduction.yml
@@ -112,8 +112,8 @@ jobs:
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color -input=false 
-            #continue-on-error: true
-      #   working-directory: ./terraform/ecs-prod
-      # - name: Terraform Apply
-      #   run: terraform apply -auto-approve -input=false 
-      #   working-directory: ./terraform/ecs-prod
+        #continue-on-error: true
+        working-directory: ./terraform/ecs-prod
+      - name: Terraform Apply
+        run: terraform apply -auto-approve -input=false 
+        working-directory: ./terraform/ecs-prod
