--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@
     GOOGLE_CREDENTIALS=
     ENC_TEXT=
     ENC_KEY=fIRQ2sMIkQ2lMDNsrS2WiS/D3q10KQ2LjHOwud1Wk+w=
+
+#[GOOGLE ANALYTICS]
+    MEASUREMENT_ID=
+    API_SECRET=
